--- a/src/sass/components/quantity/quantity.sass
+++ b/src/sass/components/quantity/quantity.sass
@@ -32,8 +32,23 @@
     align-items: center
     height: 1.75em
     line-height: 1.75em
+    [data-name="EcomTag1"] &
+      border: 2px solid deeppink 
+      font-weight: bold
+      .fa 
+        font-weight: bold
+    [data-name="EcomTag3"] &
+      border: none
+      background-color: turquoise
+      font-weight: bold
+      color: #fff
+      .fa 
+        font-weight: bold    
+        color: #fff
     .fa 
       margin-left: 0.5em
+    span 
+      line-height: 1  
   .quantitySelectDropdown
     background-color: #fff
     border: 1px solid #444
@@ -46,6 +61,22 @@
     right: 0
     top: 1.75em
     z-index: 2
+    [data-name="EcomTag1"] &
+      background-color: deeppink
+      border: none
+      button 
+        font-weight: bold
+        color: #fff 
+        &:hover 
+          background-color: darken(deeppink,20)
+    [data-name="EcomTag3"] &
+      background-color: darken(turquoise,20)
+      border: none
+      button 
+        font-weight: bold
+        color: #fff 
+        &:hover 
+          background-color: turquoise  
     button
       &:hover
         background-color: #f1f1f1
@@ -62,3 +93,17 @@
   height: 1.75em
   line-height: 1.75em    
   outline: none 
+  [data-name="EcomTag1"] & 
+    font-weight: bold 
+    border: 2px solid deeppink
+  [data-name="EcomTag3"] & 
+    font-weight: bold 
+    // border: 2px solid deeppink
+    border: none 
+    background-color: turquoise
+    color: #fff
+
+
+.quantity-input
+  margin-bottom: 1rem
+
