--- a/src/app.sass
+++ b/src/app.sass
@@ -7,6 +7,9 @@
   --icon-color: var(--color-platform)
   --button-line-height: 1.4rem
   --icon-size: 1.2rem
+  left: -1rem
+  top: -1rem
+  position: absolute
   background-color:#ffffffe6
   // background: linear-gradient(#007dff, #954ffd)
   box-shadow: 0px 4px 8px 0px #2000506e
@@ -43,3 +46,5 @@ textarea
       outline-color: #000
       outline-width: 2px
       border-color: transparent
+lit-heading, lit-paragraphs, lit-edit
+  width: 100%
