--- a/src/sass/framework/layout/general.sass
+++ b/src/sass/framework/layout/general.sass
@@ -5,6 +5,10 @@ body
   padding: 0 
   font: var(--font-stack-main)
   line-height: 1.4
+img 
+  display: block
+  max-width: 100%
+  width: 100%  
 input, select, textarea, blockquote
   font: var(--font-stack-main)  
 a:not(.btn)
